# nextart

./: Cargo.toml  README.md
nextart/: Cargo.toml
nextart/src/: main.rs  strings.rs
