[package]
name = "nextart"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = { version = "3.5.0", features = ["wayland-data-control"] }
bittenhumans = "1.0.0"
directories = "6.0.0"
iced = { version = "0.13.1", features = ["image", "tokio"] }
image = "0.25.6"
rfd = { version = "0.15.3" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
