[package]
name = "nextart"
version = "1.0.0"
edition = "2024"
authors = ["sysrqmagician"]
description = "Box art manager for NextUI"
repository = "https://github.com/sysrqmagician/nextart"
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["gaming", "emulation", "box-art", "roms", "gui"]
categories = ["gui", "multimedia"]

[dependencies]
arboard = { version = "3.5.0", features = ["wayland-data-control"] }
bittenhumans = "1.0.0"
directories = "6.0.0"
iced = { version = "0.13.1", features = ["image", "tokio"] }
image = "0.25.6"
rfd = { version = "0.15.3" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
